2005-02-18  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC2-b11

	* Fix: css classes:
	  - captionator.php
	  - view_album.php

	* Fix: adjust skins:
	  - bblue
	  - bgreen2
	  - bluemod

	* Fix: Changed [] in stats links again to work with rtl languages 
	  (error appeared in FF)

2005-02-17  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC2-cvs-b10

	* Change: Add extra session security by preventing session fixation
	  attacks.  Session IDs are changed on login and logout.

2005-02-17  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC2-cvs-b9

	* Fix: stats.php was outputting an HTML comment before loading the embedded
	  header.

	* Fix: getIMVersion() was returning a full string instead of '5' or '6'

2005-02-17  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC2-cvs-b8

	* Change: Add a new config option for bypassing our register_globals-disabled
	  emulation.  I do this unwillingly, and it is not a supported
	  configuration due to the potential for security issues and other problems
	  bug some people require the option.

2005-02-15  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC2-cvs-b7

	* Fix: Move SMTP execution into its own function to be 
	  reused in emailLogMessage()

	* Fix: Remove admin page link for non-admins

2005-02-15  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC2-cvs-b6

	* Fix: Print providers didn't display correctly if only one was selected

2005-02-15  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC2-cvs-b5

	* Fix: Correct the directory name for CPGNuke includes

2005-02-15  John Kirkland <jpk@bl.org>  1.5-RC2-cvs-b4

	* Fix: the mambo breadcrumb query in init.php was not quite
          specific enough.
        * Fix: the mambo component name, com_gallery, was being set
          by a variable, but this doesn't work in all cases.

2005-02-15  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC2-cvs-b3

	* Change: Move PhotoWorks/PhotoAccess down in the list, to preemptively
	  resolve some issues.
