@@ -1,7 +1,0 @@
-/* 
-   default text styles - background and colors overriden by
-   album 'bgcolor', 'background', and 'textcolor' properties.
-*/
-BODY
-	{ 
-	}
