@@ -1,6 +1,6 @@
 <?php
 $name=_("Bpurple");
 $description=_("White with grey pipes and purple highlight");
-$version='1.0.3';
-$last_update='2005-02-17';
+$version='1.0.4';
+$last_update='2005-02-21';
 ?>
