@@ -3444,7 +3444,7 @@ function displayPhotoFields($index, $extra_fields, $withExtraFields=true, $withE
 	}
 
 	foreach ($tables as $caption => $fields) {
-		echo "\n". '<table border="0" align="center">';
+		echo "\n". '<table border="0" align="center" class="pcaption">';
 		echo "\n". '<tr><th colspan="3" align="center">'. $caption .'</th></tr>';
 
 	        $i=0;
