@@ -1,3 +1,11 @@
+2005-02-21  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC2-b12
+
+	* Fix: css class in EXIF Table
+
+	* Fix: adjust skins:
+	  - bpurple
+	  - bred
+
 2005-02-18  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC2-b11
 
 	* Fix: css classes:
